Fix event list vertical spacing on mobile view.

--- a/event/app/admin/page.css
+++ b/event/app/admin/page.css
@@ -29,6 +29,8 @@
 
 @media (max-width: 1000px) {
     #admin-page {
+        padding-inline: 0.5rem;
+
         & .admin-page__title {
             font-size: 2.5rem;
         }
